update gitpage url

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://shawntay97.github.io/personality-matcher",
+  "homepage": "http://shawntayws.github.io/personality-matcher",
   "name": "personality-matcher",
   "version": "0.1.0",
   "private": true,
